<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context="com.register.MainActivity"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="5"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="4"
            android:orientation="vertical">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/spinnerclasstime"
                android:spinnerMode="dialog"
                android:layout_weight="1" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/spinnerclass"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/portrait"
                android:layout_weight="2"
                android:fadeScrollbars="true"
                android:foreground="@mipmap/girl1"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:background="@mipmap/picture" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="3">
            <ListView
                android:id="@+id/lst_sno"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:scrollbars="vertical"
                android:divider="@android:color/black"
                android:dividerHeight="1dp" />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="5">
                <RadioButton
                    android:id="@+id/rb_zaiqin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zaiqin"
                    android:gravity="center_vertical" />
                <RadioButton
                    android:id="@+id/rb_chidao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chidao"/>
                <RadioButton
                    android:id="@+id/rb_zaotui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zaotui"/>
                <RadioButton
                    android:id="@+id/rb_kaungke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kuangke"/>
                <RadioButton
                    android:id="@+id/rb_bingjia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bingjia"/>

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3"
        android:weightSum="30">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="18">

            <TableLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="3">
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent">
                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="学号："
                        android:gravity="center_vertical" />
                    <EditText
                        android:id="@+id/ET_sno"
                        android:text="631406010220"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:selectAllOnFocus="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false" />
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="姓名："
                        android:gravity="center_vertical" />
                    <EditText
                        android:id="@+id/ET_sname"
                        android:text="邓强"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:selectAllOnFocus="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:singleLine="true" />
                </TableRow>
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="班级："
                        android:gravity="center_vertical" />
                    <EditText
                        android:id="@+id/ET_class"
                        android:text="计科二班"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:singleLine="true" />
                </TableRow>
            </TableLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="1">
                <TableRow
                    android:layout_weight="1"
                    android:layout_width="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="考勤记录："
                        android:gravity="center_vertical" />
                </TableRow>
            </TableLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="8"
            android:weightSum="3">
            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="添加学生"
                android:layout_weight="1"
                android:background="@drawable/white_selector"/>

            <Button
                android:text="删除学生"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_del"
                android:layout_weight="1"
                android:background="@drawable/white_selector"/>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="更新信息"
                android:layout_weight="1"
                android:background="@drawable/white_selector"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">
            <Button
                android:id="@+id/btn_sure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="确认考勤"
                android:background="@drawable/blue_selector"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical|horizontal"
            android:entries="@array/records"
            android:divider="@android:color/black"
            android:dividerHeight="0dp"/>
    </LinearLayout>

</LinearLayout>
